[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="Level" type="Node" index="0"]

pause_mode = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]
LevelColour = Color( 0.9375, 0.362549, 0.362549, 1 )

[node name="LevelBackground" type="ColorRect" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="LevelCanvas" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="MessageLabel" type="Label" parent="LevelCanvas" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Remember The
Colour!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Visibility", "custom_fonts" ]

[node name="ColourShowTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[connection signal="timeout" from="ColourShowTimer" to="." method="_on_ColourShowTimer_timeout"]


